button alignment fixed

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -14,12 +14,8 @@ body {
     #ccffff 0%,
     #ffcccc 100%
   );
-  background: -moz-linear-gradient(
-    to right,
-    #ccffff 0%,
-    #ffcccc 100%
-  );
-  background: linear-gradient(to right, to right, #ccffff 0%, #ffcccc 100%); 
+  background: -moz-linear-gradient(to right, #ccffff 0%, #ffcccc 100%);
+  background: linear-gradient(to right, to right, #ccffff 0%, #ffcccc 100%);
   display: flex;
   justify-content: center;
   text-align: center;
@@ -57,7 +53,6 @@ h3 {
 }
 button {
   width: 200px;
-  height: 60px;
   font-size: 18pt;
   align-self: center;
   background-color: rgb(191, 239, 255);
@@ -114,4 +109,18 @@ ul {
   list-style-type: none;
   padding-left: 0px;
   font-size: 18pt;
+}
+#continue,
+#refreshP3,
+#deleteCookies,
+#refreshP4 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  margin: 0px auto 10px auto;
+  padding: 10px;
+}
+#startButton {
+  height: 60px;
 }
